--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=PA4
 #Configurar base de datos
-spring.datasource.url="tu url"
-spring.datasource.username="tu usuario"
-spring.datasource.password="tu contraseña"
+spring.datasource.url=jdbc:mysql://localhost:3306/torneo_karate?serverTimezone=America/Lima
+spring.datasource.username=root
+spring.datasource.password=root
 
 #Configurar el JPA
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
